@@ -1,5 +1,11 @@
 2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * seahorse-ldap-source.c: 
+    * seahorse-keyserver-results.c: Handle spaces properly in LDAP 
+    search filters. 
+    
+2007-04-06  Nate Nielsen  <nielsen@memberwebs.com>
+
     * libseahorse/seahorse-ssh-key-data.c: Don't add extra lines to 
     .ssh/authorized_keys when moving keys around. Fixes bug #352929
     
